fix overflow in the footer

--- a/css/tm-style.css
+++ b/css/tm-style.css
@@ -26,3 +26,22 @@
   grid-area: 2/1/span 2/span 2;
   clip-path: polygon(0 0,calc(50% - var(--g)/4) 0,100% calc(50% + var(--g)/4),100% 100%,0 100%);
 }
+.tm-navbar-brand {
+    /* This will align items (image and heading) horizontally */
+    display: flex; 
+    align-items: center; /* Align items vertically in the center */
+margin-bottom: 10px;
+text-decoration: none;
+}
+
+.tm-navbar-brand .tm-logo-image {
+    width: 25%; /* Or any other size */
+    height: auto; /* Maintain aspect ratio */
+    margin-right: 10px; /* Add some space between image and text */
+}
+
+.tm-navbar-brand h1 {
+    margin-top: 0; /* Adjust this as needed */
+    margin-bottom: 0; /* Remove bottom margin */
+    white-space: normal; /* Allow text wrapping */
+}
